--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,10 @@ body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
 }
+
+nav {
+  height: 70px;
+  display: flex;
+  padding: 20px 36px;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
+}
