--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-size: 62.5%;
 }
 
 body {
@@ -12,4 +13,35 @@ nav {
   display: flex;
   padding: 20px 36px;
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
+}
+
+.nav-logo {
+  max-width: 100px;
+}
+
+section {
+  padding: 36px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-img {
+  margin: 36px;
+  max-width: 400px;
+  align-self: center;
+}
+
+.hero-header {
+  font-weight: 600;
+  font-size: 3.6rem;
+  margin-bottom: 16px;
+}
+
+.hero-text {
+  font-weight: 300;
+  font-size: 1.6rem;
+  margin-top: 0;
 }
