--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,24 +1,3 @@
-* {
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-body {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-}
-
-nav {
-  height: 70px;
-  display: flex;
-  padding: 20px 36px;
-  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
-}
-
-.nav-logo {
-  max-width: 100px;
-}
-
 section {
   padding: 36px;
 }
@@ -26,6 +5,7 @@ section {
 .hero {
   display: flex;
   flex-direction: column;
+  color: var(--white);
 }
 
 .hero-img {
